--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'Error: no test specified'",
-    "start": "node .",
+    "start": "node app/index.js",
     "dev": "nodemon"
   },
   "author": "Osinachi Chukwujama",
