chore: update source code and depdencies

--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "express-todo",
   "version": "1.0.0",
   "description": "A simple express todo application",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
-    "test": "echo 'Error: no test specified'",
-    "start": "node app/index.js",
+    "test": "echo 'no test specified'",
+    "start": "node .",
     "dev": "nodemon"
   },
   "author": "Osinachi Chukwujama",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.2",
-    "express": "^4.17.3",
-    "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "express": "^4.18.3",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   }
 }
