--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Osinachi Chukwujama",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
